@@ -352,8 +352,8 @@ VOID ap_cmm_peer_assoc_req_action(
 					&HTCapability,
 					HTCapability_Len);
 
-    /* 2. qualify this STA's auth_asoc status in the MAC table, decide StatusCode */
-	StatusCode = APBuildAssociation(pAd, pEntry, CapabilityInfo, MaxSupportedRate, 
+	/* 2. qualify this STA's auth_asoc status in the MAC table, decide StatusCode */
+	StatusCode = APBuildAssociation(pAd, pEntry, CapabilityInfo, MaxSupportedRate,
 									RSN_IE, &RSNIE_Len, bWmmCapable, RalinkIe,
 									ExtCapInfo,
 									&HTCapability, &HTCapability_Len, &Aid);
@@ -361,17 +361,17 @@ VOID ap_cmm_peer_assoc_req_action(
 
 
 
-	if (StatusCode == MLME_ASSOC_REJ_DATA_RATE)
+	if (StatusCode == MLME_ASSOC_REJ_DATA_RATE) {
 			RTMPSendWirelessEvent(pAd, IW_STA_MODE_EVENT_FLAG, pEntry->Addr, pEntry->apidx, 0);
+	}
 
+	/* 3. send Association Response */
+	NStatus = MlmeAllocateMemory(pAd, &pOutBuffer);
+	if (NStatus != NDIS_STATUS_SUCCESS)
+		goto LabelOK;
 
-    /* 3. send Association Response */
-    NStatus = MlmeAllocateMemory(pAd, &pOutBuffer);
-    if (NStatus != NDIS_STATUS_SUCCESS)
-        goto LabelOK;
-        
-    DBGPRINT(RT_DEBUG_TRACE, ("%s - Send %s response (Status=%d)...\n", sAssoc, sAssoc, StatusCode));
-    Aid |= 0xc000; /* 2 most significant bits should be ON */
+	DBGPRINT(RT_DEBUG_TRACE, ("%s - Send %s response (Status=%d)...\n", sAssoc, sAssoc, StatusCode));
+	Aid |= 0xc000; /* 2 most significant bits should be ON */
 
 	SubType = isReassoc ? SUBTYPE_REASSOC_RSP : SUBTYPE_ASSOC_RSP;
 
@@ -1787,9 +1787,9 @@ USHORT APBuildAssociation(
 
 			}
 
-			if (pEntry->AuthMode < Ndis802_11AuthModeWPA)
+			if (pEntry->AuthMode < Ndis802_11AuthModeWPA) {
 				ApLogEvent(pAd, pEntry->Addr, EVENT_ASSOCIATED);
-			
+			}
 			APUpdateCapabilityAndErpIe(pAd);
 #ifdef DOT11_N_SUPPORT
 			APUpdateOperationMode(pAd);
