@@ -1588,8 +1588,6 @@ VOID AsicPercentageDeltaPower(
 			{
 				*pDeltaPwr -= 6;
 			}
-			else
-				;
 		}
 #endif /* CONFIG_STA_SUPPORT */
 	}
