@@ -522,9 +522,9 @@ static USHORT update_associated_mac_entry(
 	}
 
 
-	if (pEntry->AuthMode < Ndis802_11AuthModeWPA)
+	if (pEntry->AuthMode < Ndis802_11AuthModeWPA) {
 		ApLogEvent(pAd, pEntry->Addr, EVENT_ASSOCIATED);
-
+	}
 	APUpdateCapabilityAndErpIe(pAd);
 #ifdef DOT11_N_SUPPORT
 	APUpdateOperationMode(pAd);
@@ -1047,9 +1047,9 @@ VOID ap_cmm_peer_assoc_req_action(
 	}
 #endif /* DOT11_VHT_AC */
 
-	if (StatusCode == MLME_ASSOC_REJ_DATA_RATE)
+	if (StatusCode == MLME_ASSOC_REJ_DATA_RATE) {
 		RTMPSendWirelessEvent(pAd, IW_STA_MODE_EVENT_FLAG, pEntry->Addr, pEntry->apidx, 0);
-
+	}
 #ifdef DOT11W_PMF_SUPPORT
 SendAssocResponse:
 #endif /* DOT11W_PMF_SUPPORT */
