@@ -481,8 +481,7 @@ SendAuth:
 			APPeerAuthSimpleRspGenAndSend(pAd, pRcvHdr, Alg, Seq + 1, MLME_SUCCESS);
 
 		}
-		else
-			; /* MAC table full, what should we respond ????? */
+		/* else  MAC table full, what should we respond ????? */
 	}
 	else if ((Alg == AUTH_MODE_KEY) && 
 				((wdev->AuthMode == Ndis802_11AuthModeShared)
@@ -526,9 +525,8 @@ SendAuth:
 			MiniportMMRequest(pAd, 0, pOutBuffer, FrameLen);
 			MlmeFreeMemory(pAd, pOutBuffer);
 		}
-		else
-			; /* MAC table full, what should we respond ???? */
-	} 
+		/* else  MAC table full, what should we respond ????? */
+	}
 	else
 	{
 		/* wrong algorithm */
