@@ -1231,8 +1231,9 @@ VOID PeerAddBAReqAction(RTMP_ADAPTER *pAd, MLME_QUEUE_ELEM *Elem)
 		}
 	}
 
-	if (IS_ENTRY_CLIENT(pMacEntry))
+	if (IS_ENTRY_CLIENT(pMacEntry)) {
 		ASSERT(pMacEntry->Sst == SST_ASSOC);
+	}
 
 	pAddreqFrame = (PFRAME_ADDBA_REQ)(&Elem->Msg[0]);
 	/* 2. Always send back ADDBA Response */
